update for steambot

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">DCB Money Lending Bot</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Steam Bot</a>
         </div>
       </div>
     </nav>
@@ -44,7 +44,7 @@
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
               <h1 class="mb-5"></h1>
-              <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">I'm a DCB Loan agent</a>
+              <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">I'm your Teacher</a>
             </div>
           </div>
           <div class="col-lg-5 my-auto">
