--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                   </div>
                 </div>
               </div>
-              <center><p>&copy; 2017 MoneyLendingBot All Rights Reserved.</p></center>
+              <center><p>&copy; 2017 SteamBot All Rights Reserved.</p></center>
             </div>
           </div>
         </div>
