--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <iframe
                     width="300"
                     height="510"
-                    src="https://console.api.ai/api-client/demo/embedded/b1a1ca6a-fa44-4ca7-9940-161b2577630c">
+                    src="https://console.dialogflow.com/api-client/demo/embedded/f0d23bf4-fd4b-439d-8296-835442241360">
                     </iframe>
                   </div>
                 </div>
